<resources>
    <string name="app_name">ZUCCFairy</string>
    <string name="btn_moments_text">Moments</string>
    <string name="title_activity_login">Sign in</string>

    <!-- date -->
    <string name="today">Today</string>
    <string name="yesterday" translatable="false">Yesterday</string>
    <string name="minutes_ago" translatable="false">{count} minutes ago</string>
    <string name="hours_ago" translatable="false">{count} hours ago</string>
    <string name="days_ago" translatable="false">{count} days ago</string>
    <string name="weeks_ago" translatable="false">{count} weeks ago</string>
    <string name="months_ago" translatable="false">{count} months ago</string>
    <string name="years_ago" translatable="false">{count} years ago</string>
    <string name="comment_reply">\@</string>
    <string name="comment_me">me</string>
    <string name="action_like">Like</string>
    <string name="action_comment">Comment</string>
    <string name="daily_punch">Daily Punch</string>
    <string name="homepage">Home</string>
    <string name="send_the_content_is_empty">Send the content is empty</string>
    <string name="card_string_push">{num}人正在参与，比{percentage}%的人起的早</string>

    <!-- Clipboard -->
    <string name="clipboard_copy">Copy</string>
    <string name="clipboard_delete">Delete</string>

    <!-- Calendar -->
    <string name="month_half_name_format" translatable="false">MMM</string>
    <string name="month_name_format" translatable="false">MMMM</string>
    <string name="day_name_format" translatable="false">EEEEE</string>

    <!-- Agenda -->
    <string name="agenda_event_day_duration">d</string>
    <string name="agenda_event_no_events">No events</string>

    <!-- main activity -->
    <string name="bot_item_1">OneKey</string>
    <string name="bot_item_2">Calender</string>
    <string name="bot_item_3">Me</string>
    <string name="bot_item_send">Send</string>

    <!--home activity-->
    <string name="nickname" translatable="false">西瓜</string>
    <string name="mobilePhoneNumber" translatable="false">17764526762</string>
    <string name="exit">exit</string>
    <string name="birthday">Birthday</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="checkBox_remember_pass">remember pass</string>
</resources>
